fixed container spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@
 }
           
 body {
-  position: relative;
+  
   min-height: 100vh;
   width:100%;
   overflow:hidden;
@@ -245,28 +245,20 @@ li a {
 
 .container {
   position: absolute;
-  background-color: green;
   height: 100%;
   width: calc(100%-78px);
   left: 78px;
   transition: all 0.5s ease;
 }
+
 header {
-  margin: 12px;
+  margin: 20px 26px;
 }
 
 header h1 {
 	display: block;
-  padding-left: -20px;
 	font: 60px 'Lobster', cursive;
-	letter-spacing: 0px;
 	color: #e5383b; /*red web portfolio text*/  
-}
-
-#footnote {
-  font-size: 10px;
-  text-align: center;
-  color: #343434;
 }
 
 /* media queries */
